cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0
author:        MorrowM
maintainer:    themorrowm@gmail.com

common solution
  build-depends:
    , aoc2021
    , base        ^>=4.14.3.0
    , containers
    , parsec

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind

  hs-source-dirs:   solutions
  default-language: Haskell2010

library
  build-depends:
    , base    ^>=4.14.3.0
    , parsec

  hs-source-dirs:   common
  exposed-modules:  Common
  default-language: Haskell2010

executable day1
  import:  solution
  main-is: Day1.hs

executable day2
  import:  solution
  main-is: Day2.hs

executable day3
  import:  solution
  main-is: Day3.hs

executable day5
  import:  solution
  main-is: Day5.hs

executable day6
  import:  solution
  main-is: Day6.hs
