cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0
author:        MorrowM
maintainer:    themorrowm@gmail.com

common solution
  build-depends:
    , adjunctions
    , ansi-terminal
    , aoc2021
    , base           ^>=4.14.3.0
    , containers
    , grid
    , parsec

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind

  default-extensions:
    BangPatterns
    NumericUnderscores
    TupleSections
    TypeApplications
    ViewPatterns

  hs-source-dirs:     solutions
  default-language:   Haskell2010

library
  build-depends:
    , ansi-terminal
    , base           ^>=4.14.3.0
    , grid
    , parsec

  hs-source-dirs:   common
  exposed-modules:
    Common
    Common.Grid

  default-language: Haskell2010

executable day1
  import:  solution
  main-is: Day1.hs

executable day2
  import:  solution
  main-is: Day2.hs

executable day3
  import:  solution
  main-is: Day3.hs

executable day4
  import:  solution
  main-is: Day4.hs

executable day5
  import:  solution
  main-is: Day5.hs

executable day6
  import:  solution
  main-is: Day6.hs

executable day7
  import:  solution
  main-is: Day7.hs

executable day8
  import:  solution
  main-is: Day8.hs

executable day9
  import:  solution
  main-is: Day9.hs

executable day10
  import:  solution
  main-is: Day10.hs

executable day11
  import:  solution
  main-is: Day11.hs
